[project]
name = "ros-uv-sample"
version = "0.1.0"
description = "uv-managed python package sample"
readme = "README.md"
authors = [
    { name = "mitukou1109", email = "mitukou1109@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
